--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
           cache: "poetry"
 
       - run: |
-          poetry install --with dev
+          poetry update --with=dev
           # avoid activate evn in every step
           echo "$GITHUB_WORKSPACE/.venv/bin" >> $GITHUB_PATH
 
