--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,8 +35,8 @@ jobs:
             - id: check_version
               run: |
                   pyproject_version=$(poetry version -s)
-                  repo_name=$(basename $(poetry config repositories.main.url))
-                  latest_release=$(gh api repos/hoishing/$repo_name/releases/latest --jq .tag_name)
+                  repo_name="${GITHUB_REPOSITORY#*/}"
+                  latest_release=$(gh api repos/$GITHUB_REPOSITORY/releases/latest --jq .tag_name)
                   
                   if [ "$(printf '%s\n' "$latest_release" "$pyproject_version" | sort -V | tail -n1)" = "$pyproject_version" ]; then
                     echo "new_version=$pyproject_version" >> $GITHUB_OUTPUT
